--- a/Signup.html
+++ b/Signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up - Kneads and Nibbles</title>
-    <link rel="stylesheet" href="pages_styles.css">
+    <link rel="stylesheet" href="pages1_styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
