--- a/Signup.html
+++ b/Signup.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <header>
+<img src="https://sdmntpreastus2.oaiusercontent.com/files/00000000-1288-51f6-9272-bdf739cfbd1c/raw?se=2025-04-05T21%3A07%3A39Z&sp=r&sv=2024-08-04&sr=b&scid=9a3da91e-5248-5414-b94c-6ca42093c056&skoid=3f3a9132-9530-48ef-96b7-fee5a811733f&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-05T08%3A06%3A27Z&ske=2025-04-06T08%3A06%3A27Z&sks=b&skv=2024-08-04&sig=groqnnEUVMEyT6tyRgHsR/S4jxWKH%2BE/JnRTkxiW9bQ%3D" =atl "My Image"="Kneads and Nibbles Logo" class="logo">
         <div class="logo">
-            <h1><span>Kneads</span> and <span>Nibbles</span></h1>
+            <h2><span>Kneads</span> and <span>Nibbles</span></h2>
         </div>
         <nav>
             <ul>
@@ -24,28 +25,32 @@
 
     <main>
         <section class="signup">
-            <h2>Sign Up to Kneads and Nibbles</h2>
+            <h3>Sign Up to Kneads and Nibbles</h3>
             <form action="#" method="POST">
-                <label for="name">Full Name</label>
+               
+<h6> <label for="name">Full Name</label> </h6>
                 <input type="text" id="name" name="name" required>
 
-                <label for="email">Email Address</label>
+<h6>            
+  <label for="email">Email</label> </h6>
                 <input type="email" id="email" name="email" required>
 
-                <label for="password">Password</label>
+  <h6>              
+<label for="password">Password</label> </h6>
                 <input type="password" id="password" name="password" required>
 
-                <label for="confirm-password">Confirm Password</label>
+               
+<h6> <label for="confirm-password">Confirm Password</label> </h6>
                 <input type="password" id="confirm-password" name="confirm-password" required>
 
-                <label for="membership">Select Membership Type</label>
+              <h6>  <label for="membership">Select Membership Type</label> </h6>
                 <select id="membership" name="membership" required>
                     <option value="basic">Basic</option>
                     <option value="premium">Premium</option>
                     <option value="vip">VIP</option>
                 </select>
 
-                <label for="comment">Leave a Comment</label>
+               <h5> <label for="comment">Leave a Comment</label> </h5>
                 <textarea id="comment" name="comment" rows="4" placeholder="We would love to hear from you!"></textarea>
 
                 <button type="submit">Sign Up</button>
