--- a/aboutus.html
+++ b/aboutus.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header>
-   <img src=".images/kneads_nibbles.images.png"=atl "My Image"="Kneads and Nibbles Logo" class="logo">
+   <img src="https://sdmntpreastus2.oaiusercontent.com/files/00000000-1288-51f6-9272-bdf739cfbd1c/raw?se=2025-04-05T21%3A07%3A39Z&sp=r&sv=2024-08-04&sr=b&scid=9a3da91e-5248-5414-b94c-6ca42093c056&skoid=3f3a9132-9530-48ef-96b7-fee5a811733f&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-05T08%3A06%3A27Z&ske=2025-04-06T08%3A06%3A27Z&sks=b&skv=2024-08-04&sig=groqnnEUVMEyT6tyRgHsR/S4jxWKH%2BE/JnRTkxiW9bQ%3D"="Kneads and Nibbles Logo" class="logo">
         <h1 class="site-title">Welcome to Kneads and Nibbles</h1>
         <nav>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li class="dropdown">
-                    <a href="aboutud.html" class="dropbtn">About Us</a>
+                    <a href="aboutus.html" class="dropbtn">About Us</a>
                     <div class="dropdown-content">
                         <a href="aboutus.html#history">Our History</a>
                         <a href="aboutus.html#team">Meet the Team</a>
@@ -66,7 +66,7 @@
       <img src="https://static.vecteezy.com/system/resources/thumbnails/033/168/347/small/an-attractive-african-american-business-woman-smiling-ai-generative-free-photo.jpg"
 
    
-   <h3>Grace Ross</h3>
+   <h2>Grace Ross</h2>
         <p>Owner</p>
          </div>
     <div class="team-member">
