--- a/Checkout.html
+++ b/Checkout.html
@@ -9,14 +9,17 @@
 </head>
 <body>
     <header>
+<img src="https://sdmntpreastus2.oaiusercontent.com/files/00000000-1288-51f6-9272-bdf739cfbd1c/raw?se=2025-04-05T21%3A07%3A39Z&sp=r&sv=2024-08-04&sr=b&scid=9a3da91e-5248-5414-b94c-6ca42093c056&skoid=3f3a9132-9530-48ef-96b7-fee5a811733f&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-05T08%3A06%3A27Z&ske=2025-04-06T08%3A06%3A27Z&sks=b&skv=2024-08-04&sig=groqnnEUVMEyT6tyRgHsR/S4jxWKH%2BE/JnRTkxiW9bQ%3D" =atl "My Image"="Kneads and Nibbles Logo" class="logo">
+
         <div class="logo">
-            <h1><span>Kneads</span> and <span>Nibbles</span></h1>
+            <h2><span>Kneads</span> and <span>Nibbles</span></h2>
         </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Signup.html">Sign Up</a></li>
                 <li><a href="Checkout.html">Checkout</a></li>
+     <li><a href="customize.html">Checkout</a></li>
             </ul>
         </nav>
     </header>
@@ -41,13 +44,12 @@
         <section class="checkout-section">
             <h2>Review Your Order</h2>
 
-            <div class="order-summary">
-                <h3>Your Customizations:</h3>
+            <h3>Your Customizations:</h3>
                 <ul>
                     <li>Cake Design: <strong>Wedding</strong></li>
-                    <li>Cake Quantity: <strong>2</strong></li>
+                    <li>Cake Quantity: <strong></strong></li>
                     <li>Cookie Design: <strong>Chocolate Chip</strong></li>
-                    <li>Cookie Quantity: <strong>10</strong></li>
+                    <li>Cookie Quantity: <strong></strong></li>
                 </ul>
             </div>
 
@@ -66,7 +68,8 @@
                     <label for="card">Credit Card Number:</label>
                     <input type="text" id="card" name="card" required>
 
-                    <button type="submit" class="submit-btn">Place Order</button>
+                    <button type="submit" class="submit-btn"> <li><a href="Contactus.html">Contact Us</a></li>  </ul>
+Place Order</button>
                 </form>
             </div>
         </section>
