--- a/Contactus.html
+++ b/Contactus.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <header>
+<img src="https://sdmntpreastus2.oaiusercontent.com/files/00000000-1288-51f6-9272-bdf739cfbd1c/raw?se=2025-04-05T21%3A07%3A39Z&sp=r&sv=2024-08-04&sr=b&scid=9a3da91e-5248-5414-b94c-6ca42093c056&skoid=3f3a9132-9530-48ef-96b7-fee5a811733f&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-05T08%3A06%3A27Z&ske=2025-04-06T08%3A06%3A27Z&sks=b&skv=2024-08-04&sig=groqnnEUVMEyT6tyRgHsR/S4jxWKH%2BE/JnRTkxiW9bQ%3D" =atl "My Image"="Kneads and Nibbles Logo" class="logo">
         <div class="logo">
-            <h1><span>Kneads</span> and <span>Nibbles</span></h1>
+            <h2><span>Kneads</span> and <span>Nibbles</span></h2>
         </div>
         <nav>
             <ul>
@@ -26,9 +27,9 @@
         <section class="contact">
             <h2>Contact Us</h2>
             <p>Visit us at:</p>
-            <p><strong>Location:</strong> Trinidad, St. James</p>
-            <p><strong>Contact Number:</strong> +1 (868) 123-4567</p>
-            <p><strong>Email:</strong> info@kneadsandnibbles.com</p>
+            <p><strong>Location:</strong> Trinidad, St. James #8 Middle street</p>
+            <p><strong>Contact Number:</strong> +1 (868) 1Nibbles</p>
+            <p><strong>Email:</strong> kneadsandnibbles@gmail.com</p>
 
             <h3>Find Us on the 
 Map:</h3>
