--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src=".images/kneads_nibbles.images.png"=atl "My Image"="Kneads and Nibbles Logo" class="logo">
+        <img src="https://sdmntpreastus2.oaiusercontent.com/files/00000000-1288-51f6-9272-bdf739cfbd1c/raw?se=2025-04-05T21%3A07%3A39Z&sp=r&sv=2024-08-04&sr=b&scid=9a3da91e-5248-5414-b94c-6ca42093c056&skoid=3f3a9132-9530-48ef-96b7-fee5a811733f&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-05T08%3A06%3A27Z&ske=2025-04-06T08%3A06%3A27Z&sks=b&skv=2024-08-04&sig=groqnnEUVMEyT6tyRgHsR/S4jxWKH%2BE/JnRTkxiW9bQ%3D" =atl "My Image"="Kneads and Nibbles Logo" class="logo">
         <h1 class="site-title">Welcome to Kneads and Nibbles</h1>
         <nav>
             <ul class="nav-menu">
@@ -117,8 +117,8 @@
         </section>
  
         <section class="cta-section">
-            <a href="signup.html" class="cta btn">Join Our Mailing List</a>
-            <a href="products.html#custom" class="cta btn">Customize Your Order</a>
+            <a href="Signup.html" class="cta btn">Join Our Mailing List</a>
+            <a href="productspage.html#custom" class="cta btn">Customize Your Order</a>
         </section>
     </main>
  
